Improved structure Added new modules Auth and Planning

--- a/src/wp-content/plugins/allindata-micro-erp-core/composer.json
+++ b/src/wp-content/plugins/allindata-micro-erp-core/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "allindata/allindata-micro-erp-core",
-    "description": "MicroErp Core",
+    "description": "Micro ERP Core",
     "type": "wp-plugin",
     "version": "1.0.0",
     "minimum-stability": "stable",
