--- a/src/wp-content/themes/monstroid2-child/composer.json
+++ b/src/wp-content/themes/monstroid2-child/composer.json
@@ -4,7 +4,7 @@
     "type": "wp-theme",
     "version": "1.0.0",
     "minimum-stability": "stable",
-    "license": "GPLv2",
+    "license": "proprietary",
     "authors": [
         {
             "name": "Florian Horn",
