--- a/src/wp-content/plugins/allindata-micro-erp-planning/package.json
+++ b/src/wp-content/plugins/allindata-micro-erp-planning/package.json
@@ -10,6 +10,7 @@
   "license": "SEE LICENSE IN Readme.md",
   "dependencies": {
     "jquery-modal": "^0.9.2",
+    "moment": "^2.24.0",
     "sprintf-js": "^1.1.2",
     "tui-calendar": "^1.11.0"
   }
