--- a/src/wp-content/themes/monstroid2-child/package.json
+++ b/src/wp-content/themes/monstroid2-child/package.json
@@ -9,6 +9,7 @@
   "author": "florian.horn@all-in-data.de",
   "license": "SEE LICENSE IN Readme.md",
   "dependencies": {
+    "@dashboardcode/bsmultiselect": "^0.2.22",
     "@fortawesome/fontawesome-free": "^5.8.1",
     "jquery": "^3.3.1",
     "jquery-migrate": "^3.0.1"
