--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "allindata/allindata-micro-erp-core",
-    "description": "Micro ERP Core",
+    "name": "allindata/wordpress-micro-core",
+    "description": "The Core module of the All.In Data Micro Plugin provides fundamental and reusable functionality for the modern development of Wordpress plugins.",
     "type": "wp-plugin",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "minimum-stability": "stable",
-    "license": "proprietary",
+    "license": "GPL-2.0-or-later",
     "authors": [
         {
             "name": "Florian Horn",
